2015-11-06 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: change std::binder1st and std::binder2nd to
	std::bind1st and std::bind2nd

2015-11-05 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp, src/column.cpp: invoke
	ibis::fileManager::instance() to ensure the fileManager is
	initialized

2015-11-04 John Wu <John dot Wu at ACM dot org>
	* src/iapi.cpp: add documentation to clarify the operation of
	fastbit_iapi_extend_array

2015-10-30 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: comment out the code block in
	ibis::text::startPositions that fill .sp file when the data file
	is not present.  This is not necessarily a useful thing to do as
	pointed out by Steve Enns
	* src/dictionary.cpp: update doxygen documentation to clarify the
	merge function
	* src/mensa.cpp: in function ibis::mensa::mergeCategories, add
	calls to ibis::dictionary::sort to make sure the new dictionary
	used is sorted

2015-10-22 John Wu <John dot Wu at ACM dot org>
	* configure.ac: rearrange the test for java directory on mac to
	accommodate the recent changes in OS X 10.11

2015-10-01 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in function column::purgeIndexFile comment out
	the code that delete .dic and .int files, this will allow the
	dictionaries supplied by users to be kept and will address the
	problem reported by Jon Strabala on 9/10
	* src/category.cpp: add code to adjust mask and write the new mask
	to the corresponding mask file in text::startPositions, to add the
	problem reported by masks with text values by Jon Strabala on 9/1
	* part.h, part.cpp, bord.cpp, tafel.cpp: rename part::writeString
	to be part::writeStrings, change its 1st argument to be a
	filename, use fwrite to write the string to take advantage of the
	system buffering.  This should address the performance problem
	observed by Jon Strabala (reported on 8/22)

2015-09-29 John Wu <John dot Wu at ACM dot org>
	* src/*.h, src/*.cpp: rename stringList to stringArray, typeList